--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '5.2'
-
 services:
   app:
     build:
@@ -45,7 +43,8 @@ services:
       POSTGRES_USER: ${DB_USERNAME:-sail}
       POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
     volumes:
-      - pgsql-data:/var/lib/postgresql/data
+      - sail-pgsql:/var/lib/postgresql/data
+      - ./docker/pg_hba.conf:/var/lib/postgresql/data/pg_hba.conf:ro
     networks:
       - cspams-net
     healthcheck:
@@ -84,5 +83,9 @@ networks:
     driver: bridge
 
 volumes:
-  pgsql-data:
-    driver: local
+    sail-redis:
+        driver: local
+    sail-pgsql:
+        driver: local
+
+
